examples/avm-res-recoveryservices-vault/1.1.6/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# terraform-azurerm-avm-recoveryservices-vault

This terraform module is designed to deploy Azure Recovery Services Vault. It has support to create private link private endpoints to make the resource privately accessible via customer's private virtual networks and use a customer managed encryption key.

## Features

* Create an Azure recovery services vault resource with options such as immutability, soft delete, storage type, cross region restore, public network configuration, identity settings, and monitoring.
* Supports enabling private endpoints for backups and site recovery.
* Support customer's managed key for encryption (cmk)
* Support custom backup policies. File share policy, workload policy, virtual machine policy

## Limitations and notes

* Feature in preview: Using `user-assigned managed identities` still in preview. [reference](https://learn.microsoft.com/en-us/azure/backup/encryption-at-rest-with-cmk?tabs=portal#assign-a-user-assigned-managed-identity-to-the-vault-in-preview)
* Vaults that use `user-assigned managed identities` for CMK encryption don't support the use of private endpoints for backup. [reference](https://learn.microsoft.com/en-us/azure/backup/)

## Feature requests and work in progress

* Azure site recovery fabric
* Azure site recovery containers
* Azure site recovery network mapping
* Azure site recovery custom policies
* Azure site recovery virtual machine replication
* Azure site recovery plan

## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the [repository](https://aka.ms/avm/telemetry). There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft’s privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (>= 1.9, < 2.0)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.4)

- <a name="requirement_azurerm"></a> [azurerm](#requirement\_azurerm) (>= 3.7, < 5.0.0)

- <a name="requirement_modtm"></a> [modtm](#requirement\_modtm) (~> 0.3)

- <a name="requirement_random"></a> [random](#requirement\_random) (>= 3.5.0, < 4.0.0)

## Resources

The following resources are used by this module:

- [azapi_resource.this](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azurerm_management_lock.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/management_lock) (resource)
- [azurerm_monitor_diagnostic_setting.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/monitor_diagnostic_setting) (resource)
- [azurerm_private_endpoint.this_managed_dns_zone_groups](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/private_endpoint) (resource)
- [azurerm_private_endpoint.this_unmanaged_dns_zone_groups](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/private_endpoint) (resource)
- [azurerm_private_endpoint_application_security_group_association.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/private_endpoint_application_security_group_association) (resource)
- [azurerm_role_assignment.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/role_assignment) (resource)
- [modtm_telemetry.telemetry](https://registry.terraform.io/providers/Azure/modtm/latest/docs/resources/telemetry) (resource)
- [random_uuid.telemetry](https://registry.terraform.io/providers/hashicorp/random/latest/docs/resources/uuid) (resource)
- [azapi_client_config.current](https://registry.terraform.io/providers/Azure/azapi/latest/docs/data-sources/client_config) (data source)
- [azapi_client_config.telemetry](https://registry.terraform.io/providers/Azure/azapi/latest/docs/data-sources/client_config) (data source)
- [modtm_module_source.telemetry](https://registry.terraform.io/providers/Azure/modtm/latest/docs/data-sources/module_source) (data source)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_location"></a> [location](#input\_location)

Description: Azure region where the resource should be deployed.  If null, the location will be inferred from the resource group location.

Type: `string`

### <a name="input_name"></a> [name](#input\_name)

Description: Name: specify a name for the Azure Recovery Services Vault. Upper/Lower case letters, numbers and hyphens. number of characters 2-50

Type: `string`

### <a name="input_resource_group_name"></a> [resource\_group\_name](#input\_resource\_group\_name)

Description: The resource group where the resources will be deployed.

Type: `string`

### <a name="input_sku"></a> [sku](#input\_sku)

Description: (required) Specify SKU for Azure Recovery Service Vaults. Standard, RS0 (default)

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_alerts_for_all_job_failures_enabled"></a> [alerts\_for\_all\_job\_failures\_enabled](#input\_alerts\_for\_all\_job\_failures\_enabled)

Description: (optional) Specify Setting for Monitoring 'Alerts for All Job Failures'. true (default), false

Type: `bool`

Default: `true`

### <a name="input_alerts_for_critical_operation_failures_enabled"></a> [alerts\_for\_critical\_operation\_failures\_enabled](#input\_alerts\_for\_critical\_operation\_failures\_enabled)

Description: (optional) Specify Setting for Monitoring 'Alerts for Critical Operation Failures'. true (default), false

Type: `bool`

Default: `true`

### <a name="input_backup_protected_file_share"></a> [backup\_protected\_file\_share](#input\_backup\_protected\_file\_share)

Description: A map of protected file shares to register with the Recovery Services Vault for backup. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

- `source_storage_account_id` - (Required) The resource ID of the storage account containing the file share to protect.
- `backup_file_share_policy_name` - (Required) The name of the file share backup policy to associate with this protected item.
- `source_file_share_name` - (Required) The name of the file share within the storage account to protect.
- `disable_registration` - (Optional) Whether to disable automatic storage account registration. Defaults to `false`.
- `sleep_timer` - (Optional) Duration to sleep after creating the resource, to allow for Azure propagation. Defaults to `"60s"`.

Example Inputs:
```terraform
backup_protected_file_share = {
  fileshare1 = {
    source_storage_account_id     = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-example/providers/Microsoft.Storage/storageAccounts/stexample"
    backup_file_share_policy_name = "pol-rsv-fileshare-vault-001"
    source_file_share_name        = "myfileshare"
    disable_registration          = false
    sleep_timer                   = "60s"
  }
}
```

Type:

```hcl
map(object({
    source_storage_account_id     = string
    backup_file_share_policy_name = string
    source_file_share_name        = string
    disable_registration          = optional(bool, false)
    sleep_timer                   = optional(string, "60s")

  }))
```

Default: `null`

### <a name="input_backup_protected_vm"></a> [backup\_protected\_vm](#input\_backup\_protected\_vm)

Description: A map of protected virtual machines to register with the Recovery Services Vault for backup. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

- `source_vm_id` - (Required) The resource ID of the virtual machine to protect.
- `vm_backup_policy_name` - (Required) The name of the VM backup policy to associate with this protected item.
- `sleep_timer` - (Optional) Duration to sleep after creating the resource, to allow for Azure propagation. Defaults to `"60s"`.

Example Inputs:
```terraform
backup_protected_vm = {
  vm1 = {
    source_vm_id          = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-example/providers/Microsoft.Compute/virtualMachines/vm-example"
    vm_backup_policy_name = "pol-rsv-vm-vault-001"
    sleep_timer           = "60s"
  }
}
```

Type:

```hcl
map(object({
    source_vm_id          = string
    vm_backup_policy_name = string
    sleep_timer           = optional(string, "60s")
  }))
```

Default: `null`

### <a name="input_classic_vmware_replication_enabled"></a> [classic\_vmware\_replication\_enabled](#input\_classic\_vmware\_replication\_enabled)

Description: (option) Specify Setting for Classic VMWare Replication. true, false.

> **Note:** This variable is not directly settable via the Recovery Services Vault ARM API properties when using the AzAPI provider. The classic VMware replication setting is managed at the site recovery fabric/container level rather than the vault level. This variable is retained for backward compatibility but has no effect in the current AzAPI-based implementation.

Type: `bool`

Default: `false`

### <a name="input_cross_region_restore_enabled"></a> [cross\_region\_restore\_enabled](#input\_cross\_region\_restore\_enabled)

Description: (optional) Specify Cross Region Restore. true, false (default). var.storage\_mode\_type must GeoRedundant when setting to true

Type: `bool`

Default: `true`

### <a name="input_customer_managed_key"></a> [customer\_managed\_key](#input\_customer\_managed\_key)

Description: An object type defines a customer managed key to use for encryption.

- `key_vault_resource_id` - (Required) - The full Azure Resource ID of the key\_vault where the customer managed key will be referenced from.
- `key_name` - (Required) - The full Azur Resource ID of the customer managed Key stored in the key vault
- `key_version` - (Optional) - Customer managed key version
- `user_assigned_identity` - (Required) - The user assigned identity to use when accessing the encryption key saved in a key vault. A matching user-assigned identity must also be present in `var.managed_identities.user_assigned_resource_ids`.

Example Inputs:
```terraform
key_vault_resource_id = {
  key_vault_resource_id = "https://kv-giuh.vault.azure.net/keys/kvk-giuh/0127xxxxx4fdd94cdbd26481a1985"
  key_name  = "https://kv-giuh.vault.azure.net/keys/kvk-giuh/0127xxxxx4fdd94cdbd26481a1985"
  version = null
  user_assigned_identity = {
    resource_id = "/subscriptions/0000000-0000-0000-0000-000000000000/resourceGroups/rg-test/providers/Microsoft.ManagedIdentity/userAssignedIdentities/uai-name"
  }
}
```

Type:

```hcl
object({
    key_vault_resource_id = string
    key_name              = string
    key_version           = optional(string, null)
    user_assigned_identity = optional(object({
      resource_id = string
    }), null)
  })
```

Default: `null`

### <a name="input_diagnostic_settings"></a> [diagnostic\_settings](#input\_diagnostic\_settings)

Description: A map of diagnostic settings to create on the Recovery Services Vault. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

- `name` - (Optional) The name of the diagnostic setting. One will be generated if not set, however this will not be unique if you want to create multiple diagnostic setting resources.
- `log_categories` - (Optional) A set of log categories to send to the log analytics workspace. Defaults to `[]`.
- `log_groups` - (Optional) A set of log groups to send to the log analytics workspace. Defaults to `["allLogs"]`.
- `metric_categories` - (Optional) A set of metric categories to send to the log analytics workspace. Defaults to `["AllMetrics"]`.
- `log_analytics_destination_type` - (Optional) The destination type for the diagnostic setting. Possible values are `Dedicated` and `AzureDiagnostics`. Defaults to `Dedicated`.
- `workspace_resource_id` - (Optional) The resource ID of the log analytics workspace to send logs and metrics to.
- `storage_account_resource_id` - (Optional) The resource ID of the storage account to send logs and metrics to.
- `event_hub_authorization_rule_resource_id` - (Optional) The resource ID of the event hub authorization rule to send logs and metrics to.
- `event_hub_name` - (Optional) The name of the event hub. If none is specified, the default event hub will be selected.
- `marketplace_partner_resource_id` - (Optional) The full ARM resource ID of the Marketplace resource to which you would like to send diagnostic logs.

Example Inputs:
```terraform
diagnostic_settings = {
  diag1 = {
    name                  = "diag-rsv-example"
    workspace_resource_id = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-example/providers/Microsoft.OperationalInsights/workspaces/law-example"
    log_groups            = ["allLogs"]
    metric_categories     = ["AllMetrics"]
  }
}
```

Type:

```hcl
map(object({
    name                                     = optional(string, null)
    log_categories                           = optional(set(string), [])
    log_groups                               = optional(set(string), ["allLogs"])
    metric_categories                        = optional(set(string), ["AllMetrics"])
    log_analytics_destination_type           = optional(string, "Dedicated")
    workspace_resource_id                    = optional(string, null)
    storage_account_resource_id              = optional(string, null)
    event_hub_authorization_rule_resource_id = optional(string, null)
    event_hub_name                           = optional(string, null)
    marketplace_partner_resource_id          = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_enable_telemetry"></a> [enable\_telemetry](#input\_enable\_telemetry)

Description: This variable controls whether or not telemetry is enabled for the module.  
For more information see <https://aka.ms/avm/telemetryinfo>.  
If it is set to false, then no telemetry will be collected.

Type: `bool`

Default: `true`

### <a name="input_file_share_backup_policy"></a> [file\_share\_backup\_policy](#input\_file\_share\_backup\_policy)

Description: A map of file share backup policies to create on the Recovery Services Vault. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

- `name` - (Required) The name of the file share backup policy.
- `timezone` - (Required) Specifies the timezone. [the possible values are defined here](https://jackstromberg.com/2017/01/list-of-time-zones-supported-by-azure/).
- `frequency` - (Required) Sets the backup frequency. Possible values are `Daily` and `Hourly`.
- `backup_tier` - (Optional) The backup tier. Possible values are `snapshot` and `vault-standard`. Defaults to `snapshot`. When set to `vault-standard`, backups are stored in the Recovery Services vault instead of as snapshots.
- `snapshot_retention_in_days` - (Optional) The number of days to retain snapshots when `backup_tier` is `vault-standard`. Must be less than `retention_daily` count. Defaults to `0`.
- `retention_daily` - (Optional) The number of daily backups to keep. Must be between 1 and 200.
- `backup` - (Required) Backup schedule configuration.
  - `time` - (Required) The time of day to perform the backup in 24-hour format `HH:MM`.
  - `hourly` - (Optional) Hourly backup configuration, required when `frequency` is `Hourly`.
    - `interval` - (Required) Interval in hours at which backup is triggered. Possible values are `4`, `6`, `8`, and `12`.
    - `start_time` - (Required) Start time for the hourly backup window in 24-hour format `HH:MM`.
    - `window_duration` - (Required) Duration of the backup window in hours. Possible values are `4`, `6`, `8`, `12`, and `24`.
- `retention_weekly` - (Optional) Weekly retention configuration.
  - `count` - (Required) The number of weekly backups to keep. Must be between 1 and 9999.
  - `weekdays` - (Required) The days of the week to retain backups. Must be one of `Sunday`, `Monday`, `Tuesday`, `Wednesday`, `Thursday`, `Friday`, or `Saturday`.
- `retention_monthly` - (Optional) Monthly retention configuration.
  - `count` - (Required) The number of monthly backups to keep. Must be between 1 and 9999.
  - `weekdays` - (Optional) The weekday backups to retain. Must be one of `Sunday`, `Monday`, `Tuesday`, `Wednesday`, `Thursday`, `Friday`, or `Saturday`.
  - `weeks` - (Optional) The weeks of the month to retain backups of. Must be one of `First`, `Second`, `Third`, `Fourth`, or `Last`.
  - `days` - (Optional) The days of the month to retain backups of. Must be between 1 and 31.
  - `include_last_days` - (Optional) Whether to include the last day of the month. Defaults to `false`.
- `retention_yearly` - (Optional) Yearly retention configuration.
  - `count` - (Required) The number of yearly backups to keep. Must be between 1 and 9999.
  - `months` - (Required) The months of the year to retain backups of. Must be one of `January`, `February`, `March`, `April`, `May`, `June`, `July`, `August`, `September`, `October`, `November`, or `December`.
  - `weekdays` - (Optional) The weekday backups to retain. Must be one of `Sunday`, `Monday`, `Tuesday`, `Wednesday`, `Thursday`, `Friday`, or `Saturday`.
  - `weeks` - (Optional) The weeks of the month to retain backups of. Must be one of `First`, `Second`, `Third`, `Fourth`, or `Last`.
  - `days` - (Optional) The days of the month to retain backups of. Must be between 1 and 31.
  - `include_last_days` - (Optional) Whether to include the last day of the month. Defaults to `false`.

Example Inputs:
```terraform
file_share_backup_policy = {
  pol-rsv-fileshare-vault-001 = {
    name      = "pol-rsv-fileshare-vault-001"
    timezone  = "Pacific Standard Time"
    frequency = "Daily"
    backup = {
      time = "22:00"
    }
    retention_daily = 7
    retention_weekly = {
      count    = 7
      weekdays = ["Tuesday", "Saturday"]
    }
    retention_monthly = {
      count             = 5
      days              = [3, 10, 20]
      include_last_days = false
    }
    retention_yearly = {
      count    = 5
      months   = ["January", "June"]
      weekdays = ["Tuesday", "Saturday"]
      weeks    = ["First", "Third"]
    }
  }
}
```

Type:

```hcl
map(object({
    name     = string
    timezone = string

    frequency = string

    backup_tier                = optional(string, "snapshot")
    snapshot_retention_in_days = optional(number, 0)

    retention_daily = optional(number, null)

    backup = object({
      time = string
      hourly = optional(object({
        interval        = number
        start_time      = string
        window_duration = number
      }))
    })

    retention_weekly = optional(object({
      count    = optional(number, 7)
      weekdays = optional(list(string), [])
    }), {})

    retention_monthly = optional(object({
      count             = optional(number, 0)
      weekdays          = optional(list(string), [])
      weeks             = optional(list(string), [])
      days              = optional(list(number), [])
      include_last_days = optional(bool, false)
    }), {})

    retention_yearly = optional(object({
      count             = optional(number, 0)
      months            = optional(list(string), [])
      weekdays          = optional(list(string), [])
      weeks             = optional(list(string), [])
      days              = optional(list(number), [])
      include_last_days = optional(bool, false)
    }), {})
  }))
```

Default: `null`

### <a name="input_immutability"></a> [immutability](#input\_immutability)

Description: (optional) Specify Immutability Setting of vault. Locked, Unlocked (default), Disabled

Type: `string`

Default: `"Unlocked"`

### <a name="input_lock"></a> [lock](#input\_lock)

Description: Controls the Resource Lock configuration for this resource. The following properties can be specified:

- `kind` - (Required) The type of lock. Possible values are `\"CanNotDelete\"` and `\"ReadOnly\"`.
- `name` - (Optional) The name of the lock. If not specified, a name will be generated based on the `kind` value. Changing this forces the creation of a new resource.

Type:

```hcl
object({
    name = optional(string, null)
    kind = string
  })
```

Default: `null`

### <a name="input_managed_identities"></a> [managed\_identities](#input\_managed\_identities)

Description:   Controls the Managed Identity configuration on this resource. The following properties can be specified:

  - `system_assigned` - (Optional) Specifies if the System Assigned Managed Identity should be enabled.
  - `user_assigned_resource_ids` - (Optional) Specifies a list of User Assigned Managed Identity resource IDs to be assigned to this resource.

Type:

```hcl
object({
    system_assigned            = optional(bool, false)
    user_assigned_resource_ids = optional(set(string), [])
  })
```

Default: `{}`

### <a name="input_private_endpoints"></a> [private\_endpoints](#input\_private\_endpoints)

Description: A map of private endpoints to create on the Key Vault. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

- `name` - (Optional) The name of the private endpoint. One will be generated if not set.
- `role_assignments` - (Optional) A map of role assignments to create on the private endpoint. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time. See `var.role_assignments` for more information.
- `lock` - (Optional) The lock level to apply to the private endpoint. Default is `None`. Possible values are `None`, `CanNotDelete`, and `ReadOnly`.
- `tags` - (Optional) A mapping of tags to assign to the private endpoint.
- `subnet_resource_id` - The resource ID of the subnet to deploy the private endpoint in.
- `private_dns_zone_group_name` - (Optional) The name of the private DNS zone group. One will be generated if not set.
- `private_dns_zone_resource_ids` - (Optional) A set of resource IDs of private DNS zones to associate with the private endpoint. If not set, no zone groups will be created and the private endpoint will not be associated with any private DNS zones. DNS records must be managed external to this module.
- `application_security_group_resource_ids` - (Optional) A map of resource IDs of application security groups to associate with the private endpoint. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.
- `private_service_connection_name` - (Optional) The name of the private service connection. One will be generated if not set.
- `network_interface_name` - (Optional) The name of the network interface. One will be generated if not set.
- `location` - (Optional) The Azure location where the resources will be deployed. Defaults to the location of the resource group.
- `resource_group_name` - (Optional) The resource group where the resources will be deployed. Defaults to the resource group of the Key Vault.
- `ip_configurations` - (Optional) A map of IP configurations to create on the private endpoint. If not specified the platform will create one. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.
  - `name` - The name of the IP configuration.
  - `private_ip_address` - The private IP address of the IP configuration.

Type:

```hcl
map(object({
    name = optional(string, null)
    role_assignments = optional(map(object({
      role_definition_id_or_name             = string
      principal_id                           = string
      description                            = optional(string, null)
      skip_service_principal_aad_check       = optional(bool, false)
      condition                              = optional(string, null)
      condition_version                      = optional(string, null)
      delegated_managed_identity_resource_id = optional(string, null)
      principal_type                         = optional(string, null)
    })), {}) # see https://azure.github.io/Azure-Verified-Modules/Azure-Verified-Modules/specs/shared/interfaces/#role-assignments
    lock = optional(object({
      kind = string
      name = optional(string, null)
    }), null)                                        # see https://azure.github.io/Azure-Verified-Modules/Azure-Verified-Modules/specs/shared/interfaces/#resource-locks
    tags               = optional(map(string), null) # see https://azure.github.io/Azure-Verified-Modules/Azure-Verified-Modules/specs/shared/interfaces/#tags
    subnet_resource_id = string
    ## You only need to expose the subresource_name if there are multiple underlying services, e.g. storage.
    ## Which has blob, file, etc.
    ## If there is only one then leave this out and hardcode the value in the module.
    subresource_name                        = string
    private_dns_zone_group_name             = optional(string, "default")
    private_dns_zone_resource_ids           = optional(set(string), [])
    application_security_group_associations = optional(map(string), {})
    private_service_connection_name         = optional(string, null)
    network_interface_name                  = optional(string, null)
    location                                = optional(string, null)
    resource_group_name                     = optional(string, null)
    ip_configurations = optional(map(object({
      name               = string
      private_ip_address = string
    })), {})
  }))
```

Default: `{}`

### <a name="input_private_endpoints_manage_dns_zone_group"></a> [private\_endpoints\_manage\_dns\_zone\_group](#input\_private\_endpoints\_manage\_dns\_zone\_group)

Description: Whether to manage private DNS zone groups with this module. If set to false, you must manage private DNS zone groups externally, e.g. using Azure Policy.

Type: `bool`

Default: `true`

### <a name="input_public_network_access_enabled"></a> [public\_network\_access\_enabled](#input\_public\_network\_access\_enabled)

Description: (optional) Specify Public Network Access. true (default), false

Type: `bool`

Default: `true`

### <a name="input_role_assignments"></a> [role\_assignments](#input\_role\_assignments)

Description: A map of role assignments to create on this resource. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

- `role_definition_id_or_name` - The ID or name of the role definition to assign to the principal.
- `principal_id` - The ID of the principal to assign the role to.
- `description` - The description of the role assignment.
- `skip_service_principal_aad_check` - If set to true, skips the Azure Active Directory check for the service principal in the tenant. Defaults to false.
- `condition` - The condition which will be used to scope the role assignment.
- `condition_version` - The version of the condition syntax. Valid values are '2.0'.

> Note: only set `skip_service_principal_aad_check` to true if you are assigning a role to a service principal.

Type:

```hcl
map(object({
    role_definition_id_or_name             = string
    principal_id                           = string
    description                            = optional(string, null)
    skip_service_principal_aad_check       = optional(bool, false)
    condition                              = optional(string, null)
    condition_version                      = optional(string, null)
    delegated_managed_identity_resource_id = optional(string, null)
    principal_type                         = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_soft_delete_enabled"></a> [soft\_delete\_enabled](#input\_soft\_delete\_enabled)

Description: (optional) Specify Setting for Soft Delete. true (default), false

Type: `bool`

Default: `true`

### <a name="input_storage_mode_type"></a> [storage\_mode\_type](#input\_storage\_mode\_type)

Description: (optional) Specify Storage type of the Recovery Services Vault. GeoRedundant (default), LocallyRedundant, ZoneRedundant

Type: `string`

Default: `"GeoRedundant"`

### <a name="input_tags"></a> [tags](#input\_tags)

Description: The map of tags to be applied to the resource

Type: `map(string)`

Default: `null`

### <a name="input_vm_backup_policy"></a> [vm\_backup\_policy](#input\_vm\_backup\_policy)

Description: A map of VM backup policies to create on the Recovery Services Vault. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

- `name` - (Required) The name of the VM backup policy.
- `timezone` - (Required) Specifies the timezone. [the possible values are defined here](https://jackstromberg.com/2017/01/list-of-time-zones-supported-by-azure/).
- `policy_type` - (Required) The type of the backup policy. Possible values are `V1` and `V2`. `V2` policies extend support for Enhanced policies with hourly frequency.
- `frequency` - (Required) Sets the backup frequency. Possible values are `Hourly`, `Daily`, and `Weekly`.
- `instant_restore_retention_days` - (Optional) Specifies the number of days to keep the instant restore point. Possible values are between 1 and 5 for `V1` policies, or 1 and 30 for `V2` policies.
- `instant_restore_resource_group` - (Optional) The resource group to use for instant restore points. Map with `prefix` and/or `suffix` keys.
- `retention_daily` - (Optional) The number of daily backups to keep. Must be between 7 and 9999 for `V1` policies, or 1 and 9999 for `V2` policies.
- `backup` - (Required) Backup schedule configuration.
  - `time` - (Required) The time of day to perform the backup in 24-hour format `HH:MM`.
  - `hour_interval` - (Optional) Interval in hours at which backup is triggered. Possible values are `4`, `6`, `8`, and `12`. Used when `frequency` is `Hourly`.
  - `hour_duration` - (Optional) Duration of the backup window in hours. Possible values are between `4` and `24`. Used when `frequency` is `Hourly`.
  - `weekdays` - (Optional) The days of the week to perform backups on. Must be one of `Sunday`, `Monday`, `Tuesday`, `Wednesday`, `Thursday`, `Friday`, or `Saturday`. Used when `frequency` is `Weekly`.
- `retention_weekly` - (Optional) Weekly retention configuration.
  - `count` - (Required) The number of weekly backups to keep. Must be between 1 and 9999.
  - `weekdays` - (Required) The days of the week to retain backups. Must be one of `Sunday`, `Monday`, `Tuesday`, `Wednesday`, `Thursday`, `Friday`, or `Saturday`.
- `retention_monthly` - (Optional) Monthly retention configuration.
  - `count` - (Required) The number of monthly backups to keep. Must be between 1 and 9999.
  - `weekdays` - (Optional) The weekday backups to retain. Must be one of `Sunday`, `Monday`, `Tuesday`, `Wednesday`, `Thursday`, `Friday`, or `Saturday`.
  - `weeks` - (Optional) The weeks of the month to retain backups of. Must be one of `First`, `Second`, `Third`, `Fourth`, or `Last`.
  - `days` - (Optional) The days of the month to retain backups of. Must be between 1 and 31.
  - `include_last_days` - (Optional) Whether to include the last day of the month. Defaults to `false`.
- `retention_yearly` - (Optional) Yearly retention configuration.
  - `count` - (Required) The number of yearly backups to keep. Must be between 1 and 9999.
  - `months` - (Required) The months of the year to retain backups of. Must be one of `January`, `February`, `March`, `April`, `May`, `June`, `July`, `August`, `September`, `October`, `November`, or `December`.
  - `weekdays` - (Optional) The weekday backups to retain. Must be one of `Sunday`, `Monday`, `Tuesday`, `Wednesday`, `Thursday`, `Friday`, or `Saturday`.
  - `weeks` - (Optional) The weeks of the month to retain backups of. Must be one of `First`, `Second`, `Third`, `Fourth`, or `Last`.
  - `days` - (Optional) The days of the month to retain backups of. Must be between 1 and 31.
  - `include_last_days` - (Optional) Whether to include the last day of the month. Defaults to `false`.

Example Inputs:
```terraform
vm_backup_policy = {
  pol-rsv-vm-vault-001 = {
    name                           = "pol-rsv-vm-vault-001"
    timezone                       = "Pacific Standard Time"
    policy_type                    = "V2"
    frequency                      = "Weekly"
    instant_restore_retention_days = 5
    backup = {
      time     = "22:00"
      weekdays = ["Tuesday", "Saturday"]
    }
    retention_daily = 7
    retention_weekly = {
      count    = 7
      weekdays = ["Tuesday", "Saturday"]
    }
    retention_monthly = {
      count             = 5
      weekdays          = ["Tuesday", "Saturday"]
      weeks             = ["First", "Third"]
      days              = [3, 10, 20]
      include_last_days = false
    }
    retention_yearly = {
      count             = 5
      months            = ["January", "June"]
      weekdays          = ["Tuesday", "Saturday"]
      weeks             = ["First", "Third"]
      days              = [3, 10, 20]
      include_last_days = false
    }
  }
}
```

Type:

```hcl
map(object({
    name                           = string
    timezone                       = string
    instant_restore_retention_days = optional(number, null)
    instant_restore_resource_group = optional(map(object({
      prefix = optional(string, null)
      suffix = optional(string, null)
    })), {})
    policy_type = string
    frequency   = string

    retention_daily = optional(number, null)

    backup = object({
      time          = string
      hour_interval = optional(number, null)
      hour_duration = optional(number, null)
      weekdays      = optional(list(string), [])
    })

    retention_weekly = optional(object({
      count    = optional(number, 7)
      weekdays = optional(list(string), [])
    }), {})

    retention_monthly = optional(object({
      count             = optional(number, 0)
      weekdays          = optional(list(string), [])
      weeks             = optional(list(string), [])
      days              = optional(list(number), [])
      include_last_days = optional(bool, false)
    }), {})

    retention_yearly = optional(object({
      count             = optional(number, 0)
      months            = optional(list(string), [])
      weekdays          = optional(list(string), [])
      weeks             = optional(list(string), [])
      days              = optional(list(number), [])
      include_last_days = optional(bool, false)
    }), {})
  }))
```

Default: `null`

### <a name="input_workload_backup_policy"></a> [workload\_backup\_policy](#input\_workload\_backup\_policy)

Description: A map of workload backup policies to create on the Recovery Services Vault for SQL or SAP HANA workloads. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

- `name` - (Required) The name of the workload backup policy.
- `workload_type` - (Required) The workload type for the backup policy. Possible values are `SQLDataBase` and `SAPHanaDatabase`.
- `settings` - (Required) Policy-level settings.
  - `time_zone` - (Required) Specifies the timezone. [the possible values are defined here](https://jackstromberg.com/2017/01/list-of-time-zones-supported-by-azure/).
  - `compression_enabled` - (Required) Whether to enable compression for the backup policy. Defaults to `false`.
- `backup_frequency` - (Required) The frequency of the backup. Possible values are `Daily` and `Weekly`.
- `protection_policy` - (Required) A map of protection policies within this backup policy. The map key is used to identify each policy type entry.
  - `policy_type` - (Required) The type of this protection policy. Possible values are `Full`, `Differential`, and `Log`.
  - `retention_daily_count` - (Required) The number of daily backups to keep. Must be between 7 and 9999.
  - `backup` - (Optional) Backup schedule configuration for this policy type.
    - `time` - (Optional) The time of day to perform the backup in 24-hour format `HH:MM`.
    - `frequency_in_minutes` - (Optional) The backup frequency in minutes for `Log` policies. Possible values are `15`, `30`, `60`, `120`, `240`, `480`, `720`, and `1440`.
    - `weekdays` - (Optional) The days of the week to perform backups on. Must be one of `Sunday`, `Monday`, `Tuesday`, `Wednesday`, `Thursday`, `Friday`, or `Saturday`.
  - `retention_weekly` - (Optional) Weekly retention configuration.
    - `count` - (Required) The number of weekly backups to keep. Must be between 1 and 9999.
    - `weekdays` - (Required) The days of the week to retain backups. Must be one of `Sunday`, `Monday`, `Tuesday`, `Wednesday`, `Thursday`, `Friday`, or `Saturday`.
  - `retention_monthly` - (Optional) Monthly retention configuration.
    - `count` - (Required) The number of monthly backups to keep. Must be between 1 and 9999.
    - `weekdays` - (Optional) The weekday backups to retain. Must be one of `Sunday`, `Monday`, `Tuesday`, `Wednesday`, `Thursday`, `Friday`, or `Saturday`.
    - `weeks` - (Optional) The weeks of the month to retain backups of. Must be one of `First`, `Second`, `Third`, `Fourth`, or `Last`.
    - `monthdays` - (Optional) The days of the month to retain backups of. Must be between 1 and 28.
    - `include_last_days` - (Optional) Whether to include the last day of the month. Defaults to `false`.
  - `retention_yearly` - (Optional) Yearly retention configuration.
    - `count` - (Required) The number of yearly backups to keep. Must be between 1 and 9999.
    - `months` - (Required) The months of the year to retain backups of. Must be one of `January`, `February`, `March`, `April`, `May`, `June`, `July`, `August`, `September`, `October`, `November`, or `December`.
    - `weekdays` - (Optional) The weekday backups to retain. Must be one of `Sunday`, `Monday`, `Tuesday`, `Wednesday`, `Thursday`, `Friday`, or `Saturday`.
    - `weeks` - (Optional) The weeks of the month to retain backups of. Must be one of `First`, `Second`, `Third`, `Fourth`, or `Last`.
    - `monthdays` - (Optional) The days of the month to retain backups of. Must be between 1 and 28.
    - `include_last_days` - (Optional) Whether to include the last day of the month. Defaults to `false`.

Example Inputs:
```terraform
workload_backup_policy = {
  pol-rsv-SAPh-vault-001 = {
    name          = "pol-rsv-SAPh-vault-001"
    workload_type = "SAPHanaDatabase"
    settings = {
      time_zone           = "Pacific Standard Time"
      compression_enabled = false
    }
    backup_frequency = "Weekly"
    protection_policy = {
      log = {
        policy_type           = "Log"
        retention_daily_count = 15
        backup = {
          frequency_in_minutes = 15
          time                 = "22:00"
          weekdays             = ["Saturday"]
        }
      }
      full = {
        policy_type           = "Full"
        retention_daily_count = 15
        backup = {
          time     = "22:00"
          weekdays = ["Saturday"]
        }
        retention_weekly = {
          count    = 10
          weekdays = ["Saturday"]
        }
        retention_monthly = {
          count     = 10
          weekdays  = ["Saturday"]
          weeks     = ["First", "Third"]
          monthdays = [3, 10, 20]
        }
        retention_yearly = {
          count     = 10
          months    = ["January", "June", "October", "March"]
          weekdays  = ["Saturday"]
          weeks     = ["First", "Second", "Third"]
          monthdays = [3, 10, 20]
        }
      }
      differential = {
        policy_type           = "Differential"
        retention_daily_count = 15
        backup = {
          time     = "22:00"
          weekdays = ["Wednesday", "Friday"]
        }
      }
    }
  }
}
```

Type:

```hcl
map(object({
    name          = string
    workload_type = string
    settings = object({
      time_zone           = string
      compression_enabled = bool
    })

    backup_frequency = string
    protection_policy = map(object({
      policy_type           = string # description = "(required) Specify policy type. Full, Differential, Logs"
      retention_daily_count = number
      retention_weekly = optional(object({
        count    = optional(number, null)
        weekdays = optional(set(string), null)
      }), null)
      # retention_daily = optional(number, null) # (Required) The count that is used to count retention duration with duration type Days. Possible values are between 7 and 35.
      backup = optional(object({
        time                 = optional(string)
        frequency_in_minutes = optional(number)
        weekdays             = optional(set(string))
      }), null)

      retention_monthly = optional(object({
        count             = optional(number, null)
        weekdays          = optional(set(string), null)
        weeks             = optional(set(string), null)
        monthdays         = optional(set(number), null)
        include_last_days = optional(bool, false)
      }), null)

      retention_yearly = optional(object({
        count             = optional(number, null)
        months            = optional(set(string), null)
        weekdays          = optional(set(string), null)
        weeks             = optional(set(string), null)
        monthdays         = optional(set(number), null)
        include_last_days = optional(bool, false)
      }), null)

    }))
  }))
```

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_backup_protected_vm"></a> [backup\_protected\_vm](#output\_backup\_protected\_vm)

Description: Resource ID of the workload backup policy

### <a name="output_private_endpoints"></a> [private\_endpoints](#output\_private\_endpoints)

Description:   A map of private endpoints. The map key is the supplied input to var.private\_endpoints. The map value is the entire azurerm\_private\_endpoint resource."

### <a name="output_recovery_services_vault_file_share_policy"></a> [recovery\_services\_vault\_file\_share\_policy](#output\_recovery\_services\_vault\_file\_share\_policy)

Description: Resource ID of the file share backup policy

### <a name="output_recovery_services_vault_vm_policy"></a> [recovery\_services\_vault\_vm\_policy](#output\_recovery\_services\_vault\_vm\_policy)

Description: Resource ID of the VM backup policy

### <a name="output_recovery_workload_policy"></a> [recovery\_workload\_policy](#output\_recovery\_workload\_policy)

Description: Resource ID of the VM backup policy

### <a name="output_resource"></a> [resource](#output\_resource)

Description: resource Id output

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: resource Id output

## Modules

The following Modules are called:

### <a name="module_backup_protected_file_share"></a> [backup\_protected\_file\_share](#module\_backup\_protected\_file\_share)

Source: ./modules/backup_protected_file_share

Version:

### <a name="module_backup_protected_vm"></a> [backup\_protected\_vm](#module\_backup\_protected\_vm)

Source: ./modules/backup_protected_vm

Version:

### <a name="module_recovery_services_vault_file_share_policy"></a> [recovery\_services\_vault\_file\_share\_policy](#module\_recovery\_services\_vault\_file\_share\_policy)

Source: ./modules/file_share_policy

Version:

### <a name="module_recovery_services_vault_vm_policy"></a> [recovery\_services\_vault\_vm\_policy](#module\_recovery\_services\_vault\_vm\_policy)

Source: ./modules/virtual_machine_policy

Version:

### <a name="module_recovery_workload_policy"></a> [recovery\_workload\_policy](#module\_recovery\_workload\_policy)

Source: ./modules/workload_policy

Version:

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft’s privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
